--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-google-maps": "~2.0.19",
     "angular-google-places-autocomplete": "~0.2.5",
     "angular-notify": "~2.5.0",
-    "angular-bootstrap": "~0.13.0"
+    "angular-bootstrap": "~0.13.0",
+    "ng-table": "~0.5.4"
   }
 }
