--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "joynRideApp",
   "version": "0.0.1",
-  "main":"server.js",
+  "main": "server.js",
   "dependencies": {
-    "express" : "~4.5.1",
-    "mongoose" : "~3.8.0",
-    "body-parser" : "~1.4.2",
-    "method-override" : "~2.0.2"
+    "body-parser": "~1.4.2",
+    "bower": "^1.4.1",
+    "express": "~4.5.1",
+    "method-override": "~2.0.2",
+    "mongoose": "~3.8.0"
   }
 }
