--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "express": "~4.5.1",
     "method-override": "~2.0.2",
     "mongoose": "~3.8.0"
-  }
+  },
+	"scripts": {
+		"postinstall": "./node_modules/bower/bin/bower install"
+	}
 }
