--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "method-override": "~2.0.2",
     "mongoose": "~3.8.0"
   },
-	"scripts": {
-		"postinstall": "./node_modules/bower/bin/bower install"
-	}
+  "scripts": {
+    "start": "node server.js",
+    "postinstall": "bower install"
+  }
 }
