--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "bootstrap": "latest",
     "font-awesome": "latest",
     "animate.css": "latest",
-    "angular": "latest",
+    "angular": "1.3.15",
     "angular-route": "latest",
     "angular-material": "~0.8.3",
     "angular-google-maps": "~2.0.19",
@@ -14,5 +14,7 @@
     "angular-bootstrap": "~0.13.0",
     "ng-table": "~0.5.4",
     "angular-spinner": "~0.6.1"
+  },"resolutions":{
+  "angular": "1.3.15"
   }
 }
