--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "font-awesome": "latest",
     "animate.css": "latest",
     "angular": "1.3.15",
-    "angular-route": "latest",
+    "angular-route": "1.3.0",
     "angular-material": "~0.8.3",
     "angular-google-maps": "~2.0.19",
     "angular-google-places-autocomplete": "~0.2.5",
